--- a/Umbraco.Site/Views/MacroPartials/FP - Quotes.cshtml
+++ b/Umbraco.Site/Views/MacroPartials/FP - Quotes.cshtml
@@ -12,7 +12,7 @@
 
 }
 <div class="fp-quotes" id="numbers-trigger">
-	<h1 class="brand-info text-center"><i class="icon-quote-right"></i></h1>
+	<h2 class="brand-info text-center big"><i class="icon-quote-right"></i></h2>
 
     <h2 class="text-center quote">@quote</h2>
     <h4 class="text-center">@quoter</h4>
