--- a/Umbraco.Site/Views/MacroPartials/Players.cshtml
+++ b/Umbraco.Site/Views/MacroPartials/Players.cshtml
@@ -83,7 +83,7 @@
 						</div>
 						<div class="player-info">
 							<p class="text">@summary</p>
-							<span href="@item.Url">Profile</span>
+							<!--<span style="display: none;" href="@item.Url">Profile</span>-->
 						</div>
 					</a>
 				</li>
