--- a/Umbraco.Site/Views/Partials/MainNavigation.cshtml
+++ b/Umbraco.Site/Views/Partials/MainNavigation.cshtml
@@ -59,24 +59,26 @@
 	{
 		@* Get the first page in pages and get the level *@
 		var naviLevel = pages.First().Level;
-		
-		@* Add in level for a CSS hook *@
-		<ul class="sublevel level-@(naviLevel)">
-			@foreach (var page in pages)
-			{
-				if (page.documentTypeAlias != "Article") {
-					<li>
-						<a href="@page.Url">@page.Name</a>
-						
-						@* if the current page has any children *@
-						@if (page.Children.Any())
-						{
-							@* Call our helper to display the children *@
-							@childPages(page.Children)
-						}
-					</li>
+		if (naviLevel <= 3) {
+			
+			@* Add in level for a CSS hook *@
+			<ul class="sublevel level-@(naviLevel)">
+				@foreach (var page in pages)
+				{
+					if (page.documentTypeAlias != "Article") {
+						<li>
+							<a href="@page.Url">@page.Name</a>
+							
+							@* if the current page has any children *@
+							@if (page.Children.Any())
+							{
+								@* Call our helper to display the children *@
+								@childPages(page.Children)
+							}
+						</li>
+					}
 				}
-			}
-		</ul>
+			</ul>
+		}
 	}
 }
