--- a/Umbraco.Site/Views/Partials/_Logo.cshtml
+++ b/Umbraco.Site/Views/Partials/_Logo.cshtml
@@ -8,7 +8,7 @@
 
 @if (media != "")
 {
-    <img src="@mediaUrl" alt="" />
+    <img src="@mediaUrl" alt="Rugbyfélag Reykjavíkur logo" />
 } else
 {
     <span>@mediaUrl</span>
