--- a/Umbraco.Site/sass/rustikus/custom/_article.scss
+++ b/Umbraco.Site/sass/rustikus/custom/_article.scss
@@ -45,12 +45,13 @@
 			color: $white;
 		}
 	}
-	h1 {
+	h2 {
 		padding-top: 60px;
 		text-align: left;
 		position: relative;
 		padding-bottom: 20px;
 		margin-bottom: 30px;
+		font-size: $font-size-h1;
 		&:after {
 			@include calc(width, "100% + 200px");
 			bottom: 0px;
@@ -60,6 +61,55 @@
 			content: "";
 			position: absolute;
 			left: -200px;
+		}
+	}
+	.facebook-event {
+		padding-top: 10px;
+		i {
+			box-shadow: 0px 0px 0px 1px $facebook;
+			border-radius: 3px;
+			padding: 3px 2px 0px;
+			margin-right: 10px;
+			vertical-align: middle;
+		}
+	}
+}
+
+.prev-next-news {
+	float: left; 
+	width: 100%;
+	padding-bottom: 40px;
+	> a {
+		float: left;
+		width: 50%;
+		> em {
+			font-style: normal;
+			line-height: 54px;
+		}
+		> span {
+			@include transition(all 0.3s ease-out);
+			display: block;
+			width: 60px;
+			height: 60px;
+			border: solid 3px #ccc;
+			background-size: cover;
+			border-radius: 2px;
+			float: left;
+			margin-right: 10px;
+		}
+		&.next-link {
+			float: right;
+			text-align: right;
+			> span {
+				margin-left: 10px;
+				margin-right: 0;
+				float: right;
+			}
+		}
+		&:hover {
+			> span {
+				border-color: #808080;
+			}
 		}
 	}
 }
