--- a/Umbraco.Site/sass/rustikus/modules/custom/_loader.scss
+++ b/Umbraco.Site/sass/rustikus/modules/custom/_loader.scss
@@ -48,9 +48,9 @@
 	.spinner {
 		position: relative;
 		@include animation(rotate 1s infinite linear);
-		border: 4px solid rgba(78, 79, 80, .25);
-		width: 80px;
-		height: 80px;
+		border: 8px solid rgba(78, 79, 80, .25);
+		width: 180px;
+		height: 180px;
 		border-radius: 999px;
 
 		display: block;
@@ -58,12 +58,12 @@
 
 		span {
 			position: absolute;
-			width:80px;
-			height:80px;
-			border: 4px solid transparent;
-			border-top: 4px solid $brand-dark;
-			top: -4px;
-			left: -4px;
+			width:180px;
+			height:180px;
+			border: 8px solid transparent;
+			border-top: 8px solid white;
+			top: -8px;
+			left: -8px;
 			border-radius:999px;
 		}
 	}
@@ -143,6 +143,7 @@
 			left: 50%;
 			font-size: 30px;
 			line-height: 0.5;
+			width: 68%;
 
 			@include translate(-50%, -50%);
 		}
